# greycat-sdk-js

./: .env  .eslintrc.cjs  .gitignore  .gitlab-ci.yml  .mocharc.json  .npmignore  .prettierrc  CMakeLists.txt  LICENSE  README.md  TODO.md  abi.js  build.sh  call.js  debug.js  files-api.js  files.js  lerna.json  load.js  morton.test.js  package-lock.json  package.json  playground.js  pnpm-lock.yaml  project.gcl  project.test.abi  project.test.gcb  project.test.js  publish.sh  rollup.config.js  sandbox.js  task.js  test-project.js  test.js  tsconfig.base.json  tsconfig.build.json  tsconfig.decl.json  tsconfig.json  tsconfig.json.in  tsconfig.typings.json
cli/: .gitignore  .npmignore  CMakeLists.txt  README.md  package.json.in  tsconfig.build.json
cli/src/: greycat-core.ts.in
cli/src/commands/: execute.ts  print-lib.ts
cli/src/server/: client.test.ts  execute-result.ts  index.ts  logger-adapter.ts  protocol.ts  server.ts  types.ts
common/: .gitignore  .npmignore  CMakeLists.txt  README.md  package.json.in  tsconfig.build.json  tslint.json
common/src/: ErrorCallback.ts  ExecutionCallback.ts  GreycatError.ts  IConsole.ts  IContext.ts  IMap.ts  IObject.ts  IResolver.ts  IString.ts  greycat-types.ts.in  index.ts  utils.ts
debugger/: .gitignore  CMakeLists.txt  package.json.in  tsconfig.build.json  tsconfig.json
debugger/fixtures/: simple.gcl
debugger/samples/: client-usage.js  gspawn.js
debugger/src/: cli.ts  debug-client.test.ts  index.ts
debugger/src/model/: IBreakpoint.ts  ICurrentInfo.ts  IDebuggerClient.ts  IStackFrame.ts  index.ts
napi/: .gitignore  CMakeLists.txt  package.json.in  tsconfig.build.json  tslint.json
napi/examples/: context.js  import copy.gcl  import.gcl  types.gcl
napi/src/c/: common.c  common.h  context.c  graph.c  logger.c  map.c  object.c  type.c
napi/src/ts/: Context.ts  GArray.ts  GFunction.ts  GMap.ts  GObject.ts  GString.ts  GType.ts  Graph.ts  addon.ts  index.ts  print-lib.ts
playground/: README.md  _utils.js  abi.js  algo.js  arr.js  array.js  call.js  clone.js  debug.js  files-api.js  files.js  geo.js  nodes.js  playground.js  print.js  str.js  table.js  table.ts  task.js  task_history.js  type_map.js
record/: .gitignore  project.gcl  record.js
scripts/: _utils.js  build.js  build.sh  clean.js  package.js  package.sh  update-pkg.js
src/: GCEnum.ts  GCFunction.ts  GCObject.ts  abi.ts  bundle.ts  exports.ts  greycat.test.ts  greycat.ts  index.ts  internal.ts  io.ts  std.ts  types.ts  typings.d.ts
src/algebra/: index.ts
src/algebra_n/: index.ts
src/algebra_n/compute/: ComputeEngine.ts  ComputeState.ts  index.ts
src/algebra_n/ml/: GaussianND.ts  PCA.ts  Polynomial.ts  index.ts
src/crypto/: index.d.ts  index.js
src/native/: index.ts
src/native/core/: Array.ts  Date.ts  Error.ts  GeoPoly.ts  Map.ts  String.ts  Table.ts  Tensor.ts  duration.ts  geo.ts  index.ts  node.ts  nodeGeo.ts  nodeIndex.ts  nodeIndexBucket.ts  nodeList.ts  nodeTime.ts  time.ts
src/native/util/: Buffer.ts  Gaussian.ts  GaussianProfile.ts  HistogramF64.ts  HistogramI64.ts  Iban.ts  ProgressTracker.ts  Queue.ts  SlidingWindow.ts  TimeWindow.ts  index.ts
src/patterns/: index.ts
src/std/: index.ts  std.ts  std_ext.d.ts
src/std/core/: Error.ts  String.ts  Table.ts  duration.ts  index.ts  nodeGeo.ts  nodeIndex.ts  nodeTime.ts  nodeTimeCursor.ts  time.ts
src/std/io/: AbiReader.ts  AbiWriter.ts  Directory.ts  File.ts
src/std/lib/: core.ts  debug.ts  index.ts  io.ts  math.ts  runtime.ts  util.ts
src/std/std/: core.ts  debug.ts  io.ts  math.ts  runtime.ts  util.ts
src/std/util/: Buffer.ts  ByteArray.ts  Gaussian.ts  HistogramF64.ts  Iban.ts  ProgressTracker.ts  Quantizer.ts  Queue.ts  SlidingWindow.ts  TimeWindow.ts  index.ts
src/std_n/: index.ts  morton.ts
src/std_n/core/: Array.ts  Buffer.ts  Date.ts  Error.ts  GeoPoly.ts  Map.ts  String.ts  Table.ts  Tensor.ts  char.ts  duration.ts  field.ts  fn.ts  (+39 more)
src/utils/: bytes.ts  duration.ts  error.ts  geo.ts  index.ts  misc.ts  slugify.ts  task.ts  time.ts
tests/: .gitignore  CMakeLists.txt  package.json.in  tsconfig.build.json  wasm-tests.sh  webpack.config.js
tests/src/: browser.ts  garray.test.ts  gobject.test.ts  greycat.ts.in  resolver.test.ts
types/: .gitignore  .npmignore  CMakeLists.txt  package.json.in  std.types.json  tsconfig.build.json
types/test/: validate.js
wasm/: .gitignore  package.json.in  tsconfig.build.json  tsconfig.json
(+51 files in other folders)
