cmake_minimum_required(VERSION 3.6)
project(greycat.ts)

get_filename_component(GC_CORE_SRC_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../src" REALPATH)
if (GREYCAT_DISTRIBUTION STREQUAL "core")
  set(TS_SCOPE_PREFIX "")
else ()
  set(TS_SCOPE_PREFIX "-${GREYCAT_DISTRIBUTION}")
endif ()

configure_file("${CMAKE_CURRENT_SOURCE_DIR}/tsconfig.json.in" "${CMAKE_CURRENT_SOURCE_DIR}/tsconfig.json" NEWLINE_STYLE UNIX)

add_subdirectory(types)

find_program(FOUND_NODE node)
if (FOUND_NODE)
  get_filename_component(FOUND_NODE_ABS "${FOUND_NODE}" REALPATH)
  get_filename_component(FOUND_NODE_DIR "${FOUND_NODE_ABS}" DIRECTORY)
  get_filename_component(NODE_INCLUDE "${FOUND_NODE_DIR}/../include/node" REALPATH)

  find_program(FOUND_YARN yarn)  
  if (FOUND_YARN)
    add_subdirectory(common)
    add_subdirectory(napi)
    add_subdirectory(debugger)
    add_subdirectory(cli)
    add_subdirectory(tests)

    set(SKIP_WASM false CACHE STRING "build without wasm")
    if (NOT SKIP_WASM)
      find_program(FOUND_EMCC emcc)
      if (FOUND_EMCC)
        add_subdirectory(wasm)
      else ()
        message(STATUS "EMCC not found: WASM target disabled")
      endif ()
    endif()

  else ()
    message(STATUS "Yarn not found: TS targets disabled")
  endif ()
else ()
  message(STATUS "Node.js not found: TS targets disabled")
endif ()