project(greycat.binding.ts)

find_program(FOUND_NODE node)
if (FOUND_NODE)
    add_subdirectory(packages/types)
    add_subdirectory(packages/napi)
    # find_program(FOUND_EMCC emcc)
    # if (FOUND_EMCC)
    #     add_subdirectory(packages/wasm)
    # else ()
    #     message(STATUS "no emcc binary: wasm binding disabled")
    # endif ()
else ()
    message(STATUS "no Node.js binary: ts binding disabled")
endif ()